Don't evict CompositorFrames based on the number of SharedBitmaps

We used to keep the file descriptors of SharedBitmaps open and therefore
evicting frames would help avoid reaching the limit of max number of
open file descriptors. However, now we just close the file descriptor
after it is mapped to virtual memory and evicting frames isn't necessary
anymore.

Bug: 766470,751080
Change-Id: I9c0f54218a0efae8f7a918d808fbda9e0a9556e0
Reviewed-on: https://chromium-review.googlesource.com/682103
Reviewed-by: Antoine Labour <piman@chromium.org>
Commit-Queue: Saman Sami <samans@chromium.org>
Cr-Commit-Position: refs/heads/master@{#504145}
Former-commit-id: d2472fcee0f30ffeb1f51a71782a1212caaa4749